@@ -436,6 +436,19 @@ rpmds_Getconf(rpmdsObject * s)
     return (PyObject *) rpmds_Wrap( ds );
 }
 
+static PyObject *
+rpmds_Ldconfig(rpmdsObject * s)
+	/*@*/
+{
+    rpmds ds = NULL;
+    int xx;
+
+    /* XXX check return code, permit arg (NULL uses system default). */
+    xx = rpmdsLdconfig(&ds, NULL);
+
+    return (PyObject *) rpmds_Wrap( ds );
+}
+
 #ifdef	NOTYET
 static PyObject *
 rpmds_Compare(rpmdsObject * s, PyObject * args, PyObject * kwds)
@@ -519,6 +532,8 @@ The current index in ds is positioned at overlapping member upon success.\n" },
 	"ds.Sysinfo -> nds	- Return /etc/rpm/sysinfo dependency set.\n"},
  {"Getconf",	(PyCFunction)rpmds_Getconf,	METH_NOARGS,
 	"ds.Getconf -> nds	- Return getconf(1) dependency set.\n"},
+ {"Ldconfig",	(PyCFunction)rpmds_Ldconfig,	METH_NOARGS,
+	"ds.Ldconfig -> nds	- Return /etc/ld.so.cache dependency set.\n"},
 #ifdef	NOTYET
  {"Compare",	(PyCFunction)rpmds_Compare,	METH_VARARGS|METH_KEYWORDS,
 	NULL},
