@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.27
+Release: 0.28
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -510,6 +510,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Sat Oct 29 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.28
+- add /etc/ld.so.cache provides as a dependency name space set.
+
 * Fri Oct 28 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.27
 - upgrade to db-4.4.11 internal.
 
